Login e registro funcionando (com Oauth2)

--- a/package.json
+++ b/package.json
@@ -15,8 +15,16 @@
   "author": "@Bryanads",
   "license": "MIT",
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "firebase": "^10.6.0",
     "gh-pages": "^6.1.1",
+    "google-auth-library": "^9.15.0",
+    "jwt-decode": "^4.0.0",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
